myteo/test/analyze/type_check/binary_operation/equality.myte
module Test

fun intToInt(x: Int): Int = x
fun intToString(x: Int): String = "test"

fun main() {
  (1 == 1: Bool);
  ("a" == "b": Bool);
  (() == (): Bool);
  (true == false: Bool);
  (1 != 2: Bool);

  (1 == true: Bool);
  (true == 1: Bool);
  (intToInt == intToString: Bool);
}